# ticoder

./: .gitignore  Cargo.toml  Dockerfile  index.html  package.json  pnpm-lock.yaml  readme.md  tsconfig.json  vite.config.ts
app/: .gitignore  .prettierrc  DEMO.8xp  Dockerfile  app.config.mjs  index.html  package.json  pnpm-lock.yaml  schema.prisma  tsconfig.json
app/src/: index.tsx  ticalc-usb.d.ts  vite-env.d.ts
cfb/: Cargo.toml  demo.cfb  file.cfb  for.cfb  grammar.peg  let.cfb  readme.md
cfb/blockly/: block-defs.ts  generator.ts  hues.ts
cfb/src/: bindings.rs  consts.rs  labels.rs  lib.rs  macros.rs  registers.rs  resolvers.rs  shared.rs  ti_lifecycle.rs  traits.rs
pubsite/: Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts
pubsite/src/: app.css  app.html
pubsite/tailwind-plugins/: ticoder-markdown.ts
server/: Cargo.toml  Dockerfile
server/.cargo/: config.toml
server/api/: Cargo.toml
server/api/src/: db.rs  interop.rs  macros.rs  main.rs  prisma.rs  util.rs
server/api/src/routes/: auth.rs  program.rs
server/prisma/: schema.prisma
server/prisma-cli/: Cargo.toml  schema.prisma
server/prisma-cli/migrations/20240210171449_new_users_with_programs/: migration.sql
server/prisma-cli/migrations/20240309211039_user_id_to_string/: migration.sql
server/prisma-cli/src/: main.rs
server/prisma/migrations/20240209054807_initial/: migration.sql
server/prisma/migrations/20240213203505_flush_out_user_model/: migration.sql
server/prisma/migrations/20240307022952_/: migration.sql
server/src/: interop.rs  main.rs  notary.rs  prisma.rs  router.rs  server.rs  util.rs
server/src/routes/: mod.rs  program.rs  ti_router_error.rs
server/tibalt/: Cargo.toml
src/: App.tsx  index.tsx  vite-end.d.ts
tibuilder/: Cargo.toml  Dockerfile
(+90 files in other folders)
