[package]
name = "ticoder-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prisma"
path = "src/bin/prisma.rs"

[[bin]]
name = "ticoder-server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = "0.4.34"
dotenv = "0.15.0"
http = "1.0.0"
httpz = "0.0.6"
jsonwebtoken = "9.2.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = ["rspc"]}
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = ["rspc"] }
reqwest = { version = "0.11.24", features = ["blocking"] }
rspc = { version = "0.1.3", features = ["axum"] }
serde = "1.0.196"
serde_json = "1.0.113"
specta = "1.0.5"
tap = "1.0.1"
tibrs = "0.1.0"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }
