[package]
name = "ticoder-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.0"
chrono = "0.4.34"
dotenv = "0.15.0"
http = "1.0.0"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
rspc = "0.2.0"
rspc-axum = { version = "0.1.1", features = ["ws"] }
serde = "1.0.196"
serde_json = "1.0.113"
specta = "1.0.5"
tap = "1.0.1"
tibrs = "0.1.0"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = ["rspc"]}
